--- a/single-responsibility-principle/pom.xml
+++ b/single-responsibility-principle/pom.xml
@@ -2,22 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>design-principle</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>design-principle</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>single-responsibility-principle</module>
-    </modules>
-    <packaging>pom</packaging>
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.14</version>
-        </dependency>
-    </dependencies>
+    <artifactId>single-responsibility-principle</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
