里氏代换原则

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>single-responsibility-principle</module>
         <module>open-closed-principle</module>
+        <module>liskov-substitution-principle</module>
     </modules>
     <packaging>pom</packaging>
     <dependencies>
